CSRF under construction

--- a/src/license.html
+++ b/src/license.html
@@ -1,6 +1,6 @@
 <h2>testwiki v0.1 alpha</h2>
 <p>Copyright © testwiki all rights reserved.</p>
-<h2>Open source license</h2>
+<h2>Open source licence</h2>
 <ul>
     <li>
         <a href='https://getbootstrap.com/'>Bootstrap</a> by Twitter, Inc. and the Bootstrap Authrors.
@@ -78,6 +78,6 @@
         </pre>
     </li>
     <li>
-        <a href='https://jquery.com/'>JQuery</a> (<a href='https://jquery.org/license/'>License</a>)
+        <a href='https://jquery.com/'>JQuery</a> (<a href='https://jquery.org/license/'>Licence</a>)
     </li>
 </ul>
